--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>a-kitchen</h1>
 <br>
 <input id="name" type="text" size=17 placeholder="Device Name">
-<button type="button" onclick="search()">sraech</button>
+<button type="button" onclick="go()">sraech</button>
 <p id= "demo"> 123456789 </p>
 <p id = "data">DATA</p>
 
