--- a/index.html
+++ b/index.html
@@ -7,18 +7,14 @@
 <h1>a-kitchen</h1>
 <br>
 <input id="name" type="text" size=17 placeholder="Device Name">
-<button type="button" onclick="go()">go</button>
-<p id= "demo"> 123456789 </p>
-<p id = "data">DATA</p>
-
-<br>
-<button type="button" onclick="startNo()">startNotifications</button>
-<br>
-<button type="button" onclick="stopNo()">stopNotifications</button>
-<br>
-<button type="button" onclick="w()">write</button>
-<br>
-
+<button type="button" onclick="go()">go 1</button>
+<p>DATA</p>
+<ul>
+<li><a href="#" id="d0"></a>
+<li><a href="#" id="d1"></a>
+<li><a href="#" id="d2"></a>
+<li><a href="#" id="d3"></a>
+</ul>
 <p>Links
 <ul>
 <li><a href="https://googlechrome.github.io/samples/web-bluetooth/">Web Bluetooth Samples</a>
