--- a/index.html
+++ b/index.html
@@ -8,15 +8,28 @@
 <br>
 <input id="name" type="text" size=17 placeholder="Device Name">
 <button type="button" onclick="go()">go 1</button>
-<p id="d0">0</p>
-<p id="d1">1</p>
-<p id="d2">2</p>
-<p id="d3">3</p>
+<p>Data</p>
 <ul>
-<li id="c0"></li>
-<li id="c1"></li>
-<li id="c2"></li>
-<li id="c3"></li>
+<li id="c00"></li>
+<li id="c01"></li>
+<li id="c02"></li>
+<li id="c03"></li>
+<li id="c04"></li>
+<li id="c05"></li>
+<li id="c06"></li>
+<li id="c07"></li>
+<li id="c08"></li>
+<li id="c09"></li>
+<li id="c10"></li>
+<li id="c11"></li>
+<li id="c12"></li>
+<li id="c13"></li>
+<li id="c14"></li>
+<li id="c15"></li>
+<li id="c16"></li>
+<li id="c17"></li>
+<li id="c18"></li>
+<li id="c19"></li>
 </ul>
 <p>Links
 <ul>
@@ -25,4 +38,3 @@
 </ul>
 </body>
 </html>
-
