--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title>a-kitchen</title>
+<title>Test</title>
 </head>
 <script src="inspect.js"></script>
 <body>
-<h1>a-kitchen</h1>
+<h1>Test</h1>
 <br>
 <input id="name" type="text" size=17 placeholder="Device Name">
 <button type="button" onclick="go()">go 1</button>
