--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <body>
 <h1>Test</h1>
 <br>
-<input id="name" type="text" size=17 placeholder="Device Name">
-<button type="button" onclick="go()">go 1</button>
+<button type="button" onclick="go()">&nbsp;go&nbsp;</button>
 <p>Data</p>
 <ul>
 <li id="c00"></li>
