--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <title>Inspector</title>
 </head>
 <body>
-<br>
-<button type="button" onclick="go()">&nbsp;Scan&nbsp;</button>
+<table>
+    <tr><td>REMOTE ADDR<td><button type="button" onclick="go()">&nbsp;Scan&nbsp;</button>
+    <tr><td>REMOTE NAME<td>
+</table>
 <p>Data</p>
 <ul>
 <li id="c00"></li>
