--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 <table>
     <tr><td>REMOTE ADDR<td><button type="button" onclick="go()">&nbsp;Scan&nbsp;</button>
     <tr><td>REMOTE NAME<td>
+    <tr><td>&nbsp;<td>
+    <tr><td>CMD_POWER<td>
+    <tr><td>CMD_TEMPERATURE<td>
+    <tr><td>CMD_TIMER<td>
+    <tr><td>CMD_PERIPHERAL<td>
+    <tr><td>CMD_LOADTEST<td>
+    <tr><td>CMD_INDICATOR<td>
+    <tr><td>CMD_MODE<td>
+    <tr><td>&nbsp;<td>
+    <tr><td>RSP_ERROR<td>
 </table>
 <p>Data</p>
 <ul>
