--- a/index.html
+++ b/index.html
@@ -5,18 +5,34 @@
 </head>
 <body>
 <table>
-    <tr><td>REMOTE ADDR<td><button type="button" onclick="go()">&nbsp;Scan&nbsp;</button>
-    <tr><td>REMOTE NAME<td>
-    <tr><td>&nbsp;<td>
-    <tr><td>CMD_POWER<td>
-    <tr><td>CMD_TEMPERATURE<td>
-    <tr><td>CMD_TIMER<td>
-    <tr><td>CMD_PERIPHERAL<td>
-    <tr><td>CMD_LOADTEST<td>
-    <tr><td>CMD_INDICATOR<td>
-    <tr><td>CMD_MODE<td>
-    <tr><td>&nbsp;<td>
-    <tr><td>RSP_ERROR<td>
+<tr><td>REMOTE ADDR<td onclick="go()">Scan
+<tr><td>REMOTE NAME<td>
+<tr><td>&nbsp;<td>
+<tr><td>CMD_POWER<td>
+<tr><td>CMD_TEMPERATURE<td>
+<tr><td>CMD_TIMER<td>
+<tr><td>CMD_PERIPHERAL<td>
+<tr><td>CMD_LOADTEST<td>
+<tr><td>CMD_INDICATOR<td>
+<tr><td>CMD_MODE<td>
+<tr><td>&nbsp;<td>
+<tr><td>RSP_ERROR<td>
+<tr><td>RSP_TEMPERATURE<td>
+<tr><td>RSP_BUTTON<td>
+<tr><td>RSP_KNOB<td>
+<tr><td>&nbsp;<td>
+<tr><td>RSP_CURRENT<td>
+<tr><td>RSP_VOLTAGE<td>
+<tr><td>RSP_PULSE<td>
+<tr><td>RSP_LOADTEST<td>
+<tr><td>&nbsp;<td>
+<tr><td>RSP_TEMPCOIL<td>
+<tr><td>RSP_TEMPENV<td>
+<tr><td>RSP_TEMPSINK<td>
+<tr><td>&nbsp;<td>
+<tr><td>RSP_CLOCK<td>
+<tr><td>RSP_TOPOLOGY<td>
+<tr><td>RSP_VERSION<td>
 </table>
 <p>Data</p>
 <ul>
