--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <table>
-<tr><td>REMOTE ADDR<td onclick="go()">Scan
+<tr><td>REMOTE ADDR<td onclick="go()">(Click to scan)
 <tr><td>REMOTE NAME<td>
 <tr><td>&nbsp;<td>
 <tr><td>CMD_POWER<td>
