--- a/index.html
+++ b/index.html
@@ -5,34 +5,34 @@
 </head>
 <body>
 <table>
-<tr><td>REMOTE ADDR<td onclick="go()">(Click to scan)
-<tr><td>REMOTE NAME<td>
-<tr><td>&nbsp;<td>
-<tr><td>CMD_POWER<td>
-<tr><td>CMD_TEMPERATURE<td>
-<tr><td>CMD_TIMER<td>
-<tr><td>CMD_PERIPHERAL<td>
-<tr><td>CMD_LOADTEST<td>
-<tr><td>CMD_INDICATOR<td>
-<tr><td>CMD_MODE<td>
-<tr><td>&nbsp;<td>
-<tr><td>RSP_ERROR<td>
-<tr><td>RSP_TEMPERATURE<td>
-<tr><td>RSP_BUTTON<td>
-<tr><td>RSP_KNOB<td>
-<tr><td>&nbsp;<td>
-<tr><td>RSP_CURRENT<td>
-<tr><td>RSP_VOLTAGE<td>
-<tr><td>RSP_PULSE<td>
-<tr><td>RSP_LOADTEST<td>
-<tr><td>&nbsp;<td>
-<tr><td>RSP_TEMPCOIL<td>
-<tr><td>RSP_TEMPENV<td>
-<tr><td>RSP_TEMPSINK<td>
-<tr><td>&nbsp;<td>
-<tr><td>RSP_CLOCK<td>
-<tr><td>RSP_TOPOLOGY<td>
-<tr><td>RSP_VERSION<td>
+<tr><td>REMOTE ADDR<td>&nbsp;<td onclick="go()">(Click to scan)
+<tr><td>REMOTE NAME<td><td>
+<tr><td>&nbsp;
+<tr><td>CMD_POWER<td><td>
+<tr><td>CMD_TEMPERATURE<td><td>
+<tr><td>CMD_TIMER<td><td>
+<tr><td>CMD_PERIPHERAL<td><td>
+<tr><td>CMD_LOADTEST<td><td>
+<tr><td>CMD_INDICATOR<td><td>
+<tr><td>CMD_MODE<td><td>
+<tr><td>&nbsp;
+<tr><td>RSP_ERROR<td><td>
+<tr><td>RSP_TEMPERATURE<td><td>
+<tr><td>RSP_BUTTON<td><td>
+<tr><td>RSP_KNOB<td><td>
+<tr><td>&nbsp;
+<tr><td>RSP_CURRENT<td><td>
+<tr><td>RSP_VOLTAGE<td><td>
+<tr><td>RSP_PULSE<td><td>
+<tr><td>RSP_LOADTEST<td><td>
+<tr><td>&nbsp;
+<tr><td>RSP_TEMPCOIL<td><td>
+<tr><td>RSP_TEMPENV<td><td>
+<tr><td>RSP_TEMPSINK<td><td>
+<tr><td>&nbsp;
+<tr><td>RSP_CLOCK<td><td>
+<tr><td>RSP_TOPOLOGY<td><td>
+<tr><td>RSP_VERSION<td><td>
 </table>
 <p>Data</p>
 <ul>
