--- a/index.html
+++ b/index.html
@@ -85,23 +85,24 @@ d17=document.getElementById('c17');
 d18=document.getElementById('c18');
 d19=document.getElementById('c19');
 
-navigator.wakeLock.request("display").then(
-    function successFunction() {
-        d00.innerHTML='Ok';
-    },
-    function errorFunction() {
-        // error
-    }
-);
-/*navigator.wakeLock.request("system").then(
-    function successFunction() {
-        // success
-    },
-    function errorFunction() {
-        // error
-    }
-);*/
-
+if(navigator.wakeLock){
+    navigator.wakeLock.request("display").then(
+        function successFunction() {
+            d00.innerHTML='Ok';
+        },
+        function errorFunction() {
+            // error
+        }
+    );
+    /*navigator.wakeLock.request("system").then(
+        function successFunction() {
+            // success
+        },
+        function errorFunction() {
+            // error
+        }
+    );*/
+};
 function go(){
     navigator.bluetooth.requestDevice({filters:[{services: ['00000000-0000-1000-8000-00805f9b34fb']}]})
     .then(device => device.gatt.connect())
