--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <table>
 <tr><td>REMOTE ADDR<td>&nbsp;<td onclick="go()">(Click to scan)
-<tr><td>REMOTE NAME<td id="name"><td>
+<tr><td>REMOTE NAME<td><td><span id="name"></span>
 <tr><td>&nbsp;
 <tr><td>CMD_POWER<td><td>
 <tr><td>CMD_TEMPERATURE<td><td>
