--- a/index.html
+++ b/index.html
@@ -92,8 +92,14 @@ uuid_down = '00000002-0000-1000-8000-00805f9b34fb'
 
 function go(){
     navigator.bluetooth.requestDevice({filters:[{services: [uuid_tnnl]}]})
-    .then(device => device.gatt.connect())
-    .then(server => server.getPrimaryService(uuid_tnnl))
+    .then(device => {
+        console.log('device.gatt.connect');
+        return device.gatt.connect();
+    })
+    .then(server => {
+        console.log('server.getPrimaryService');
+        server.getPrimaryService(uuid_tnnl);
+    })
     .then(service => service.getCharacteristic(uuid_down))
     .then(characteristic => characteristic.startNotifications())
     .then(characteristic => {
