--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ uuid_down = '00000002-0000-1000-8000-00805f9b34fb'
 function go(){
     navigator.bluetooth.requestDevice({filters:[{services: [uuid_tnnl]}]})
     .then(device => {
-        rname.innerHTML = 'device.name';
+        rname.innerHTML = device.name;
         console.log('device.gatt.connect');
         return device.gatt.connect();
     })
