--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <table>
-<tr><td>REMOTE ADDR<td>&nbsp;<td onclick="go()">(Click to scan)
-<tr><td>REMOTE NAME<td><td><span id="rname"></span>
+<tr><td>REMOTE ADDR<td><td onclick="go()">(Click to scan)
+<tr><td>REMOTE NAME<td>&nbsp;<td id="rname">
 <tr><td>&nbsp;
 <tr><td>CMD_POWER<td><td>
 <tr><td>CMD_TEMPERATURE<td><td>
