--- a/index.html
+++ b/index.html
@@ -5,34 +5,33 @@
 </head>
 <body>
 <table>
-<tr><td>REMOTE ADDR<td><td onclick="go()">(Click to scan)
-<tr><td>REMOTE NAME<td>&nbsp;<td id="rname">
-<tr><td>&nbsp;
-<tr><td>CMD_POWER<td><td>
-<tr><td>CMD_TEMPERATURE<td><td>
-<tr><td>CMD_TIMER<td><td>
-<tr><td>CMD_PERIPHERAL<td><td>
-<tr><td>CMD_LOADTEST<td><td>
-<tr><td>CMD_INDICATOR<td><td>
-<tr><td>CMD_MODE<td><td>
-<tr><td>&nbsp;
-<tr><td>RSP_ERROR<td><td>
-<tr><td>RSP_TEMPERATURE<td><td>
-<tr><td>RSP_BUTTON<td><td>
-<tr><td>RSP_KNOB<td><td>
-<tr><td>&nbsp;
-<tr><td>RSP_CURRENT<td><td>
-<tr><td>RSP_VOLTAGE<td><td>
-<tr><td>RSP_PULSE<td><td>
-<tr><td>RSP_LOADTEST<td><td>
-<tr><td>&nbsp;
-<tr><td>RSP_TEMPCOIL<td><td>
-<tr><td>RSP_TEMPENV<td><td>
-<tr><td>RSP_TEMPSINK<td><td>
-<tr><td>&nbsp;
-<tr><td>RSP_CLOCK<td><td>
-<tr><td>RSP_TOPOLOGY<td><td>
-<tr><td>RSP_VERSION<td><td>
+<tr><th>REMOTE NAME<td>&nbsp;<td id="rname" onclick="go()">(Click to scan)
+<tr><th>&nbsp;
+<tr><th>CMD_POWER<td><td>
+<tr><th>CMD_TEMPERATURE<td><td>
+<tr><th>CMD_TIMER<td><td>
+<tr><th>CMD_PERIPHERAL<td><td>
+<tr><th>CMD_LOADTEST<td><td>
+<tr><th>CMD_INDICATOR<td><td>
+<tr><th>CMD_MODE<td><td>
+<tr><th>&nbsp;
+<tr><th>RSP_ERROR<td><td>
+<tr><th>RSP_TEMPERATURE<td><td>
+<tr><th>RSP_BUTTON<td><td>
+<tr><th>RSP_KNOB<td><td>
+<tr><th>&nbsp;
+<tr><th>RSP_CURRENT<td><td>
+<tr><th>RSP_VOLTAGE<td><td>
+<tr><th>RSP_PULSE<td><td>
+<tr><th>RSP_LOADTEST<td><td>
+<tr><th>&nbsp;
+<tr><th>RSP_TEMPCOIL<td><td>
+<tr><th>RSP_TEMPENV<td><td>
+<tr><th>RSP_TEMPSINK<td><td>
+<tr><th>&nbsp;
+<tr><th>RSP_CLOCK<td><td>
+<tr><th>RSP_TOPOLOGY<td><td>
+<tr><th>RSP_VERSION<td><td>
 </table>
 <p>Data</p>
 <ul>
