--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <title>Inspector</title>
 </head>
+<style>
+td{align:left}
+</style>
 <body>
 <table>
 <tr><th>REMOTE NAME<td>&nbsp;<td id="rname" onclick="go()">(Click to scan)
