--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Inspector</title>
 </head>
 <style>
-th{align:left}
+th{font-size:75%;font-weight:normal;text-align:left}
 </style>
 <body>
 <table>
