--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <title>Inspector</title>
 </head>
 <style>
-th{font-size:75%;font-weight:normal;text-align:left}
+*{font-family:verdana,arial,helvetica,sans-serif}
+th{font-size:67%;font-weight:normal;text-align:left;vertical-align:bottom}
 </style>
 <body>
 <table>
