--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@ function handleCharacteristicValueChanged(event) {
     for (i = 0; i < n;){
         var k = s.getInt8(i++);
         var v = s.getInt8(i++);
-        console.log('k: ' + k + ', v: ' + v);
+        switch(k){
+        case 0x22:
+            cpwer.innerHTML = v;
+            break;
+        default:
+            console.log('k: ' + k + ', v: ' + v);
+        }
     }
 }
 </script>
