--- a/index.html
+++ b/index.html
@@ -11,31 +11,31 @@ th{font-size:67%;font-weight:normal;text-align:left;vertical-align:bottom}
 <table>
 <tr><th>REMOTE NAME<td>&nbsp;<td id="rmot" onclick="go()">(Click to scan)
 <tr><th>&nbsp;
-<tr><th>CMD_POWER<td><td id="cpwr">
-<tr><th>CMD_TEMPERATURE<td><td id="ctmp">
-<tr><th>CMD_TIMER<td><td id="ctmr">
-<tr><th>CMD_PERIPHERAL<td><td id="cpph">
-<tr><th>CMD_LOADTEST<td><td id="ctst">
-<tr><th>CMD_INDICATOR<td><td id="cind">
-<tr><th>CMD_MODE<td><td id="cmod">
+<tr><th>CMD_POWER<td><td id="cpwr">&nbsp;
+<tr><th>CMD_TEMPERATURE<td><td id="ctmp">&nbsp;
+<tr><th>CMD_TIMER<td><td id="ctmr">&nbsp;
+<tr><th>CMD_PERIPHERAL<td><td id="cpph">&nbsp;
+<tr><th>CMD_LOADTEST<td><td id="ctst">&nbsp;
+<tr><th>CMD_INDICATOR<td><td id="cind">&nbsp;
+<tr><th>CMD_MODE<td><td id="cmod">&nbsp;
 <tr><th>&nbsp;
-<tr><th>RSP_ERROR<td><td>
-<tr><th>RSP_TEMPERATURE<td><td>
-<tr><th>RSP_BUTTON<td><td>
-<tr><th>RSP_KNOB<td><td>
+<tr><th>RSP_ERROR<td><td>&nbsp;
+<tr><th>RSP_TEMPERATURE<td><td>&nbsp;
+<tr><th>RSP_BUTTON<td><td>&nbsp;
+<tr><th>RSP_KNOB<td><td>&nbsp;
 <tr><th>&nbsp;
-<tr><th>RSP_CURRENT<td><td>
-<tr><th>RSP_VOLTAGE<td><td>
-<tr><th>RSP_PULSE<td><td>
-<tr><th>RSP_LOADTEST<td><td>
+<tr><th>RSP_CURRENT<td><td>&nbsp;
+<tr><th>RSP_VOLTAGE<td><td>&nbsp;
+<tr><th>RSP_PULSE<td><td>&nbsp;
+<tr><th>RSP_LOADTEST<td><td>&nbsp;
 <tr><th>&nbsp;
-<tr><th>RSP_TEMPCOIL<td><td>
-<tr><th>RSP_TEMPENV<td><td>
-<tr><th>RSP_TEMPSINK<td><td>
+<tr><th>RSP_TEMPCOIL<td><td>&nbsp;
+<tr><th>RSP_TEMPENV<td><td>&nbsp;
+<tr><th>RSP_TEMPSINK<td><td>&nbsp;
 <tr><th>&nbsp;
-<tr><th>RSP_CLOCK<td><td>
-<tr><th>RSP_TOPOLOGY<td><td>
-<tr><th>RSP_VERSION<td><td>
+<tr><th>RSP_CLOCK<td><td>&nbsp;
+<tr><th>RSP_TOPOLOGY<td><td>&nbsp;
+<tr><th>RSP_VERSION<td><td>&nbsp;
 </table>
 <p>Links
 <ul>
