--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ cpwr = document.getElementById('cpwr');
 ctmp = document.getElementById('ctmp');
 ctmr = document.getElementById('ctmr');
 ctst = document.getElementById('ctst');
-rmot = document.getElementById('rname');
+rmot = document.getElementById('rmot');
 
 uuid_tnnl = '00000000-0000-1000-8000-00805f9b34fb';
 uuid_down = '00000002-0000-1000-8000-00805f9b34fb'
