--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@ function handleCharacteristicValueChanged(event) {
         case 0x26:
             ctst.innerHTML = v;
             break;
+        case 0x27:
+            //ctst.innerHTML = v;
+            break;
         case 0x28:
             ltmr = v;
             ctmr.innerHTML = htmr + ltmr;
