--- a/index.html
+++ b/index.html
@@ -9,33 +9,33 @@ th{font-size:67%;font-weight:normal;text-align:left;vertical-align:bottom}
 </style>
 <body>
 <table>
-<tr><th>REMOTE NAME<td>&nbsp;<td id="rmot" onclick="go()">(Click to scan)
+<tr><th>REMOTE NAME<td>&nbsp;<td><div id="rmot" onclick="go()">(Click to scan)
 <tr><th>&nbsp;
-<tr><th>CMD_POWER<td><td id="cpwr">&nbsp;
-<tr><th>CMD_TEMPERATURE<td><td id="ctmp">&nbsp;
-<tr><th>CMD_TIMER<td><td id="ctmr">&nbsp;
-<tr><th>CMD_PERIPHERAL<td><td id="cpph">&nbsp;
-<tr><th>CMD_LOADTEST<td><td id="ctst">&nbsp;
-<tr><th>CMD_INDICATOR<td><td id="cind">&nbsp;
-<tr><th>CMD_MODE<td><td id="cmod">&nbsp;
+<tr><th>CMD_POWER<td><td><div id="cpwr">&nbsp;</div>
+<tr><th>CMD_TEMPERATURE<td><td><div id="ctmp">&nbsp;</div>
+<tr><th>CMD_TIMER<td><td><div id="ctmr">&nbsp;</div>
+<tr><th>CMD_PERIPHERAL<td><td><div id="cpph">&nbsp;</div>
+<tr><th>CMD_LOADTEST<td><td><div id="ctst">&nbsp;</div>
+<tr><th>CMD_INDICATOR<td><td><div id="cind">&nbsp;</div>
+<tr><th>CMD_MODE<td><td><div id="cmod">&nbsp;</div>
 <tr><th>&nbsp;
-<tr><th>RSP_ERROR<td><td id="rerr">&nbsp;
-<tr><th>RSP_TEMPERATURE<td><td id="rtpr">&nbsp;
-<tr><th>RSP_BUTTON<td><td id="rbtn">&nbsp;
-<tr><th>RSP_KNOB<td><td id="rknb">&nbsp;
+<tr><th>RSP_ERROR<td><td><div id="rerr">&nbsp;</div>
+<tr><th>RSP_TEMPERATURE<td><td><div id="rtpr">&nbsp;</div>
+<tr><th>RSP_BUTTON<td><td><div id="rbtn">&nbsp;</div>
+<tr><th>RSP_KNOB<td><td><div id="rknb">&nbsp;</div>
 <tr><th>&nbsp;
-<tr><th>RSP_CURRENT<td><td id="rcur">&nbsp;
-<tr><th>RSP_VOLTAGE<td><td id="rvol">&nbsp;
-<tr><th>RSP_PULSE<td><td id="rpls">&nbsp;
-<tr><th>RSP_LOADTEST<td><td id="rtst">&nbsp;
+<tr><th>RSP_CURRENT<td><td><div id="rcur">&nbsp;</div>
+<tr><th>RSP_VOLTAGE<td><td><div id="rvol">&nbsp;</div>
+<tr><th>RSP_PULSE<td><td><div id="rpls">&nbsp;</div>
+<tr><th>RSP_LOADTEST<td><td><div id="rtst">&nbsp;</div>
 <tr><th>&nbsp;
-<tr><th>RSP_TEMPCOIL<td><td id="rcol">&nbsp;
-<tr><th>RSP_TEMPENV<td><td id="renv">&nbsp;
-<tr><th>RSP_TEMPSINK<td><td id="rsnk">&nbsp;
+<tr><th>RSP_TEMPCOIL<td><td><div id="rcol">&nbsp;</div>
+<tr><th>RSP_TEMPENV<td><td><div id="renv">&nbsp;</div>
+<tr><th>RSP_TEMPSINK<td><td><div id="rsnk">&nbsp;</div>
 <tr><th>&nbsp;
-<tr><th>RSP_CLOCK<td><td id="rclk">&nbsp;
-<tr><th>RSP_TOPOLOGY<td><td id="rtop">&nbsp;
-<tr><th>RSP_VERSION<td><td id="rver">&nbsp;
+<tr><th>RSP_CLOCK<td><td><div id="rclk">&nbsp;</div>
+<tr><th>RSP_TOPOLOGY<td><td><div id="rtop">&nbsp;</div>
+<tr><th>RSP_VERSION<td><td><div id="rver">&nbsp;</div>
 </table>
 <p>Links
 <ul>
